[tool.poetry]
name = "textual-datepicker"
version = "0.0.1"
description = "A datepicker widget for Textual."
authors = ["Mischa Schindowski <mschindowski@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "textual_datepicker"}]
repository = "https://github.com/mitosch/textual-datepicker"
keywords = ["textual", "textual datepicker", "textual dateselect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "*"
textual = ">=0.6.0"

[tool.poetry.group.dev.dependencies]
textual = { version = ">=0.6.0", extras = ["dev"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
